visualizing unseen bass and treble and some color adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>AudioAvator</title>
+
+
   <style>
 
   html{
@@ -12,8 +14,8 @@
     .bin{
       position: relative;
       width: 5px;
-      height: 18px;
-      border-radius: 2px
+      height: 16px;
+      border-radius: 2px;
 
     }
 
@@ -25,21 +27,35 @@
       background-color: white;
     }
 
-    #fun{
+    #main-body{
       height: 750px;
       width:9600px;
 /*      margin: 0 auto;*/
       position: relative;
       left: 100px;
+      top: 40px;
+    }
+
+    .bass{
+      border: 1px solid rgb(154 , 19 , 53);
+      background-color: white;
+      width:3px;
+    }
+
+    .treble{
+      border: 1px solid rgb(158 , 161 ,204 );
+      background-color: white;
+      width:3px;
     }
 
   </style>
   <script src='javascripts/jquery.js'></script>
   <script src='javascripts/script.js'></script>
+
 </head>
 <body>
 
-  <div id='fun'>
+  <div id='main-body'>
 
 
 
