preparing for merge

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,22 @@
       background-color: white;
     }
 
+    .choose-a-song{
+      text-decoration: none;
+      display: inline;
+    }
+
+    #choose-tune{
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      width: 800px;
+      height: 20px;
+      text-decoration: none;
+      margin: 0 auto;
+      padding: 0 0;
+    }
+
     #main-body{
       height: 750px;
       width:9600px;
@@ -54,6 +70,12 @@
 
 </head>
 <body>
+  <div id="choose-tune">
+      <ul>Listen To:
+        <li class="choose-a-song">'RoyGBiv' by Boards of Canada</li>
+        <li class="choose-a-song">'Around The World' by Daft Punk</li>
+      </ul>
+  </div>
 
   <div id='main-body'>
 
