Got the app working nicely.  Added the final touches on the dynamic js

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>AudioAvator</title>
-
+  <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 
   <style>
 
-  html{
-    background-color: white;
-  }
+    html {
+      background-color: white;
+    }
+
+    h3 {
+      color: black;
+      font-family: 'Poiret One', Verdana, serif;
+      text-align: center;
+    }
 
     .bin{
       position: relative;
@@ -45,8 +51,6 @@
 
     #main-body{
       height: 750px;
-      width:9600px;
-/*      margin: 0 auto;*/
       position: relative;
       left: 100px;
       top: 40px;
@@ -70,7 +74,7 @@
 
 </head>
 <body>
-
+  <h3>Audio Avatar</h3>
   <div id='main-body'>
 
   </div>
